--- a/apps/api/contracts/figma-import.openapi.yaml
+++ b/apps/api/contracts/figma-import.openapi.yaml
@@ -83,6 +83,43 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorEnvelope'
+  /api/v1/sources/{source_id}/audits/report:
+    post:
+      summary: Export rule audit report JSON
+      operationId: postRuleReport
+      parameters:
+        - in: path
+          name: source_id
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties: true
+              description: Tokens Studio compatible JSON object or FigmaDMS theme-config JSON.
+      responses:
+        '200':
+          description: Report generated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RuleReportResponse'
+        '400':
+          description: Invalid request payload or path parameter.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorEnvelope'
+        '500':
+          description: Unexpected server error while generating report.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorEnvelope'
 components:
   schemas:
     ErrorBody:
@@ -235,6 +272,23 @@ components:
           format: date-time
         normalization:
           $ref: '#/components/schemas/RuleAuditNormalization'
+        summary:
+          $ref: '#/components/schemas/RuleAuditSummary'
+        violations:
+          type: array
+          items:
+            $ref: '#/components/schemas/RuleAuditViolation'
+    RuleReportResponse:
+      type: object
+      required: [source_id, audit_id, generated_at, summary, violations]
+      properties:
+        source_id:
+          type: string
+        audit_id:
+          type: string
+        generated_at:
+          type: string
+          format: date-time
         summary:
           $ref: '#/components/schemas/RuleAuditSummary'
         violations:
