--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.0.0",
+    "firebase": "10.12.3",
+    "next": "^15.5.12",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
