--- a/infra/terraform/environments/production/terraform.tfvars.example
+++ b/infra/terraform/environments/production/terraform.tfvars.example
@@ -1,8 +1,8 @@
 project_id = "qadms-production"
 region     = "us-central1"
 
-api_image = "gcr.io/qadms-production/qadms-api:latest"
-web_image = "gcr.io/qadms-production/qadms-web:latest"
+api_image = "us-central1-docker.pkg.dev/qadms-production/qadms/qadms-api:latest"
+web_image = "us-central1-docker.pkg.dev/qadms-production/qadms/qadms-web:latest"
 
 api_env_vars = {
   QADMS_ENV = "production"
